--- a/_posts/assets/header.css
+++ b/_posts/assets/header.css
@@ -1,4 +1,4 @@
 .mdl-layout__header {
-  background: url(http://getmdl.io/assets/demos/transparent.jpg) center / cover;
-  min-height: 600px;
+  background: url(https://getmdl.io/assets/demos/welcome_card.jpg) center / cover;
+  min-height: 500px;
 }
