--- a/_posts/assets/header.ejs
+++ b/_posts/assets/header.ejs
@@ -6,10 +6,11 @@
     <div class="mdl-layout-spacer"></div>
     <!-- Desktop Navigation -->
     <nav class="mdl-navigation">
-      <a class="mdl-navigation__link" href="/">Link</a>
-      <a class="mdl-navigation__link" href="/">Link</a>
-      <a class="mdl-navigation__link" href="/">Link</a>
-      <a class="mdl-navigation__link" href="/">Link</a>
+      <a class="mdl-navigation__link" href="/">Home</a>
+      <a class="mdl-navigation__link" href="/">Code</a>
+      <a class="mdl-navigation__link" href="/">Demos</a>
+      <a class="mdl-navigation__link" href="/">Blog</a>
+      <a class="mdl-navigation__link" href="/">About</a>
     </nav>
   </div>
 </header>
@@ -17,9 +18,10 @@
   <span class="mdl-layout-title">Site Name</span>
   <!-- Mobile Navigation -->
   <nav class="mdl-navigation">
-    <a class="mdl-navigation__link" href="/">Link</a>
-    <a class="mdl-navigation__link" href="/">Link</a>
-    <a class="mdl-navigation__link" href="/">Link</a>
-    <a class="mdl-navigation__link" href="/">Link</a>
+    <a class="mdl-navigation__link" href="/">Home</a>
+    <a class="mdl-navigation__link" href="/">Code</a>
+    <a class="mdl-navigation__link" href="/">Demos</a>
+    <a class="mdl-navigation__link" href="/">Blog</a>
+    <a class="mdl-navigation__link" href="/">About</a>
   </nav>
 </div>
