--- a/_posts/assets/header.css
+++ b/_posts/assets/header.css
@@ -1,4 +1,4 @@
 .mdl-layout__header {
-  background: url(https://getmdl.io/assets/demos/welcome_card.jpg) center / cover;
+  background: url(https://cdn.elegantthemes.com/blog/wp-content/uploads/2013/09/bg-2-full.jpg) center / cover;
   min-height: 500px;
 }
