--- a/_posts/assets/header.ejs
+++ b/_posts/assets/header.ejs
@@ -1,7 +1,7 @@
 <header class="mdl-layout__header mdl-layout__header--transparent">
   <div class="mdl-layout__header-row">
     <!-- Title -->
-    <span class="mdl-layout-title">Site Name</span>
+    <span class="mdl-layout-title">Martin Gollogly</span>
     <!-- Add spacer, to align navigation to the right -->
     <div class="mdl-layout-spacer"></div>
     <!-- Desktop Navigation -->
