--- a/_posts/assets/header.ejs
+++ b/_posts/assets/header.ejs
@@ -15,7 +15,7 @@
   </div>
 </header>
 <div class="mdl-layout__drawer">
-  <span class="mdl-layout-title">Site Name</span>
+  <span class="mdl-layout-title">Martin Gollogly</span>
   <!-- Mobile Navigation -->
   <nav class="mdl-navigation">
     <a class="mdl-navigation__link" href="/">Home</a>
