--- a/_posts/assets/header.css
+++ b/_posts/assets/header.css
@@ -2,3 +2,7 @@
   background: url(https://cdn.elegantthemes.com/blog/wp-content/uploads/2013/09/bg-10-full.jpg) center / cover;
   min-height: 500px;
 }
+
+.mdl-navigation__link {
+  font-size: 16px
+}
